--- a/index.html
+++ b/index.html
@@ -208,12 +208,9 @@
   <!-- Map -->
   <div id="contact" class="map">
     <iframe
-      src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=SMKN 2 RANTAU UTARA,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.0967419453973!2d99.8083033142639!3d2.1163923592238536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x302d98ab1c98b093%3A0xf52aedf3e00cce1e!2sSMKN%202%20RANTAU%20UTARA!5e0!3m2!1sid!2sid!4v1607571519733!5m2!1sid!2sid"
+      frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     <br />
-    <small>
-      <a
-        href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=SMKN 2 RANTAU UTARA,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-    </small>
   </div>
 
   <!-- Footer -->
