--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <!-- <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our
             friends at
             <a href="https://unsplash.com/">Unsplash</a>!</p> -->
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">Profile Sekolah</a>
+          <a class="mt-5 btn btn-dark btn-xl js-scroll-trigger" href="#services">Profil Sekolah</a>
         </div>
       </div>
     </div>
