--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mamba Bootstrap Template - Index</title>
+  <title>SMK Negeri 2 Rantau Utara</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -659,33 +659,17 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact Us</h2>
+          <h2>Lokasi Sekolah</h2>
         </div>
 
         <div class="row">
 
-          <div class="col-lg-6 d-flex align-items-stretch" data-aos="fade-up">
+          <div class="col-lg-12 d-flex align-items-stretch" data-aos="fade-up">
             <div class="info-box">
-              <i class="bx bx-map"></i>
-              <h3>Our Address</h3>
-              <p>A108 Adam Street, New York, NY 535022</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="info-box">
-              <i class="bx bx-envelope"></i>
-              <h3>Email Us</h3>
-              <p>info@example.com<br>contact@example.com</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="info-box ">
-              <i class="bx bx-phone-call"></i>
-              <h3>Call Us</h3>
-              <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
-            </div>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3410.836677754413!2d99.8083033147551!3d2.1163869984572727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x302d98ab1c98b093%3A0xf52aedf3e00cce1e!2sSMKN%202%20RANTAU%20UTARA!5e1!3m2!1sid!2sid!4v1607576098428!5m2!1sid!2sid"
+                frameborder="0" style="border:0; width: 100%; height: 70vh;" allowfullscreen="" aria-hidden="false"
+                tabindex="0"></iframe> </div>
           </div>
 
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="300">
