--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
   <section id="topbar" class="d-none d-lg-block">
     <div class="container d-flex">
       <div class="contact-info me-auto">
-        <i class="icofont-envelope"></i><a href="mailto:contact@example.com">contact@example.com</a>
-        <i class="icofont-phone"></i> +1 5589 55488 55
+        <i class="icofont-envelope"></i><a href="mailto:contact@example.com">smknduaru@gmail.com</a>
+        <i class="icofont-phone"></i> +62-852-9734-7089
       </div>
       <div class="social-links float-right">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+        <a href="https://web.facebook.com/SMK-NEGERI-2-RANTAU-UTARA-189381287764301/?_rdc=1&_rdr" class="facebook"><i
+            class="icofont-facebook"></i></a>
+        <a href="https://instagram.com/aloysiusgestart" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=6285297347089&text=Halo%20Admin%20SMK%20Negeri%202%20Rantau%20Utara"
+          class="whatsapp"><i class="icofont-whatsapp"></i></a>
       </div>
     </div>
   </section>
@@ -91,7 +91,7 @@
               <li><a href="#">Drop Down 5</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact Us</a></li>
+          <li><a href="#lokasi">Contact Us</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -167,17 +167,24 @@
 
         <div class="row no-gutters">
           <div class="col-lg-6 video-box">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
-              data-autoplay="true"></a>
+            <center>
+              <img src="assets/img/kepala sekolah.jpg" class="img-fluid rounded" alt="" style=" height: 80vh;"
+                data-aos="fade-up" data-aos-delay="100">
+            </center>
+            <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
+              data-autoplay="true"></a> -->
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center about-content">
 
-            <div class="section-title">
-              <h2>About Us</h2>
-              <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-                consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
+            <div class="section-title" data-aos="fade-up" data-aos-delay="100">
+              <h2>Kepala Sekolah</h2>
+              <table class="table table-borderless">
+                <tr>
+                  <th>Nama</th>
+                  <td>Jabahot Simamora</td>
+                </tr>
+              </table>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
@@ -655,7 +662,7 @@
     </section><!-- End Frequently Asked Questions Section -->
 
     <!-- ======= Contact Us Section ======= -->
-    <section id="contact" class="contact">
+    <section id="lokasi" class="contact">
       <div class="container">
 
         <div class="section-title">
@@ -669,40 +676,7 @@
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3410.836677754413!2d99.8083033147551!3d2.1163869984572727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x302d98ab1c98b093%3A0xf52aedf3e00cce1e!2sSMKN%202%20RANTAU%20UTARA!5e1!3m2!1sid!2sid!4v1607576098428!5m2!1sid!2sid"
                 frameborder="0" style="border:0; width: 100%; height: 70vh;" allowfullscreen="" aria-hidden="false"
-                tabindex="0"></iframe> </div>
-          </div>
-
-          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="300">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-lg-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                    data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validate"></div>
-                </div>
-                <div class="col-lg-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                    data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validate"></div>
-                </div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                  data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required"
-                  data-msg="Please write something for us" placeholder="Message"></textarea>
-                <div class="validate"></div>
-              </div>
-              <div class="mb-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+                tabindex="0" class="rounded"></iframe> </div>
           </div>
 
         </div>
