--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
               data-autoplay="true"></a> -->
           </div>
 
-          <div class="col-lg-6 d-flex flex-column justify-content-center about-content">
+          <div class="col-lg-6 d-flex flex-column justify-content-center about-content" data-aos="fade-up"
+            data-aos-delay="100">
 
             <div class="section-title" data-aos="fade-up" data-aos-delay="100">
               <h2>Kepala Sekolah</h2>
