--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo.png" rel="icon">
+  <link href="assets/img/logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -62,7 +62,7 @@
     <div class="container d-flex">
 
       <div class="logo me-auto">
-        <h1 class="text-light"><a href="index.html"><span>SMKN 2 Rantau Utara</span></a></h1>
+        <h3 class="text-light"><a href="index.html"><span>SMKN 2 Rantau Utara</span></a></h3>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -688,57 +688,32 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="footer-top">
+  <footer id="footer" class="p-0 bg-dark">
+    <div class="footer-top bg-dark p-3">
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-info">
-            <h3>Mamba</h3>
+          <div class="col-lg-5 col-md-6 footer-info m-0">
+            <h3>SMK Negeri 2 Rantau Utara</h3>
             <p>
-              A108 Adam Street <br>
-              NY 535022, USA<br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              JL. WR. SUPRATMAN NO. 01 A RANTAUPRAPAT, PADANG MATINGGI, kec. Rantau Utara, Kab. Labuhan Batu Prov.
+              Sumatera Utara<br><br>
+              <strong>Phone:</strong> +62-852-9734-7089<br>
+              <strong>Email:</strong> smknduaru@gmail.com <br>
             </p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://web.facebook.com/SMK-NEGERI-2-RANTAU-UTARA-189381287764301/?_rdc=1&_rdr"
+                class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://instagram.com/aloysiusgestart" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://api.whatsapp.com/send?phone=6285297347089&text=Halo%20Admin%20SMK%20Negeri%202%20Rantau%20Utara"
+                class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
           </div>
 
         </div>
@@ -746,15 +721,11 @@
     </div>
 
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Mamba</span></strong>. All Rights Reserved
+      <div class="copyright p-2">
+        &copy; Copyright <strong><span>SMKN2RU</span></strong>. All Rights Reserved
       </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/mamba-one-page-bootstrap-template-free/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      <div class="credits p-2">
+        Designed by <a href="https://dennyset5.github.io/">Denny Setiawan</a>
       </div>
     </div>
   </footer><!-- End Footer -->
