--- a/index.html
+++ b/index.html
@@ -688,8 +688,8 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer" class="p-0 bg-dark">
-    <div class="footer-top bg-dark p-3">
+  <footer id="footer" class="p-0">
+    <div class="footer-top p-3">
       <div class="container">
         <div class="row">
 
